--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <body>
 <h1>Silly Face and Scales</h1>
-
+<svg width="200" height="200">
+    <circle cx="100" cy="100" r="50" fill="yellow"></circle>
+    <rect x="70" y="60" width="20" height="40" fill="green"></rect>
+    <rect x="110" y="60" width="20" height="40" fill="green"></rect>
+    <ellipse cx="100" cy="120" rx="30" ry="10" fill="red"></ellipse>
+</svg>
+<span></span>
 <body>
 </html>
